--- a/common-service/pom.xml
+++ b/common-service/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>com.aresky</groupId>
 	<artifactId>common-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>common-service</name>
 	<description>Common service for other services to use</description>
 	<properties>
