--- a/auth-service/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/auth-service/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -29,6 +29,26 @@
       "name": "open-api.dev-url",
       "type": "java.lang.String",
       "description": "A description for 'open-api.dev-url'"
+    },
+    {
+      "name": "eureka.server.hostname",
+      "type": "java.lang.String",
+      "description": "A description for 'eureka.server.hostname'"
+    },
+    {
+      "name": "eureka.server.port",
+      "type": "java.lang.String",
+      "description": "A description for 'eureka.server.port'"
+    },
+    {
+      "name": "mysql-server.hostname",
+      "type": "java.lang.String",
+      "description": "A description for 'mysql-server.hostname'"
+    },
+    {
+      "name": "mysql-server.port",
+      "type": "java.lang.String",
+      "description": "A description for 'mysql-server.port'"
     }
   ]
 }
