add description for kafka properties

--- a/auth-service/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/auth-service/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -49,6 +49,21 @@
       "name": "mysql-server.port",
       "type": "java.lang.String",
       "description": "A description for 'mysql-server.port'"
+    },
+    {
+      "name": "kafka.bootstrap-servers.url",
+      "type": "java.lang.String",
+      "description": "A description for 'kafka.bootstrap-servers.url'"
+    },
+    {
+      "name": "kafka.consumer.auto-offset-reset",
+      "type": "java.lang.String",
+      "description": "A description for 'kafka.consumer.auto-offset-reset'"
+    },
+    {
+      "name": "kafka.consumer.group-id",
+      "type": "java.lang.String",
+      "description": "A description for 'kafka.consumer.group-id'"
     }
   ]
 }
