add kafka properties for application.yml file

--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -38,3 +38,9 @@ auth:
 mysql-server:
   hostname: mysql-server
   port: 3306
+kafka:
+  bootstrap-servers:
+    url: http://localhost:9092
+  consumer:
+    auto-offset-reset: latest
+    group-id: bk-travel-group
