--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -19,6 +19,7 @@
 		<spring-cloud.version>2023.0.0</spring-cloud.version>
 		<liquibase-version>4.26.0</liquibase-version>
 		<jwt-version>0.11.1</jwt-version>
+		<kafka-version>3.1.2</kafka-version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -41,6 +42,15 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.projectreactor.kafka</groupId>
+			<artifactId>reactor-kafka</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>${kafka-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -114,16 +124,10 @@
 			<artifactId>modelmapper</artifactId>
 			<version>3.2.0</version>
 		</dependency>
-
-		<!--		<dependency>-->
-		<!--			<groupId>org.apache.logging.log4j</groupId>-->
-		<!--			<artifactId>log4j-slf4j-impl</artifactId>-->
-		<!--			<version>2.17.1</version>-->
-		<!--			<scope>test</scope>-->
-		<!--		</dependency>-->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-log4j2</artifactId>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
