update hostname for instance of eureka client

--- a/tour-service/src/main/resources/application.yml
+++ b/tour-service/src/main/resources/application.yml
@@ -18,6 +18,8 @@ spring:
 # Euraka config
 # ---------------
 eureka:
+  instance:
+    hostname: localhost
   server:
     host: discovery-server
     port: 8761
