--- a/booking-service/src/main/resources/application.yml
+++ b/booking-service/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: booking-service
   liquibase:
-    url: jdbc:mysql://localhost:3306/bk_travel_booking
+    url: jdbc:mysql://mysql-server:3306/bk_travel_booking
     user: root
     password: root
     change-log: classpath:db/changelog/changelog-master.xml
@@ -13,11 +13,11 @@ eureka:
     hostname: localhost
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://discovery-server:8761/eureka
 bk-travel:
   config:
     database:
       server:
-        url: r2dbc:mysql://localhost:3306/bk_travel_booking
+        url: r2dbc:mysql://mysql-server:3306/bk_travel_booking
         username: root
         password: root
