--- a/tour-service/src/main/resources/application.yml
+++ b/tour-service/src/main/resources/application.yml
@@ -3,17 +3,27 @@ server:
 spring:
   application:
     name: tour-service
+  datasource:
+    url: jdbc:mysql://mysql-server:3306/bk_travel_tour
+    username: root
+    password: root
   liquibase:
     url: jdbc:mysql://mysql-server:3306/bk_travel_tour
     user: root
     password: root
     change-log: classpath:db/changelog/changelog-master.xml
-  data:
-    web:
-      pageable:
-        default-page-size: 10
-        page-parameter: pageNumber
-        one-indexed-parameters: true
+  jpa:
+    hibernate:
+      naming:
+        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    properties:
+      "[hibernate.dialect]": org.hibernate.dialect.MySQL8Dialect
+      "[hibernate.format_sql]": true
+logging:
+  level:
+    "[org.hibernate.SQL]": DEBUG
+    "[org.hibernate.type.descriptor.sql.BasicBinder]": TRACE
 # ---------------
 # Euraka config
 # ---------------
