--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=payment-service
 # --------------------
 # Mysql conection config
 # --------------------
-spring.datasource.url=jdbc:mysql://localhost:3306/bk_travel_payment
+spring.datasource.url=jdbc:mysql://mysql-server:3306/bk_travel_payment
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -16,7 +16,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 # --------------------
 # Liquibase migration config
 # --------------------
-spring.liquibase.url=jdbc:mysql://localhost:3306/bk_travel_payment
+spring.liquibase.url=jdbc:mysql://mysql-server:3306/bk_travel_payment
 spring.liquibase.user=root
 spring.liquibase.password=root
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
@@ -24,4 +24,4 @@ spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 # Eureka client config
 # --------------------
 eureka.instance.hostname=localhost
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka
