--- a/tour-service/src/main/resources/application.yml
+++ b/tour-service/src/main/resources/application.yml
@@ -20,10 +20,10 @@ spring:
     properties:
       "[hibernate.dialect]": org.hibernate.dialect.MySQL8Dialect
       "[hibernate.format_sql]": true
-logging:
-  level:
-    "[org.hibernate.SQL]": DEBUG
-    "[org.hibernate.type.descriptor.sql.BasicBinder]": TRACE
+# logging:
+#   level:
+#     "[org.hibernate.SQL]": DEBUG
+#     "[org.hibernate.type.descriptor.sql.BasicBinder]": TRACE
 # ---------------
 # Euraka config
 # ---------------
