--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8090
 spring.application.name=payment-service
 # --------------------
-# Mysql conection config
+# Mysql connection config
 # --------------------
 spring.datasource.url=jdbc:mysql://mysql-server:3306/bk_travel_payment
 spring.datasource.username=root
@@ -25,3 +25,7 @@ spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 # --------------------
 eureka.instance.hostname=localhost
 eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka
+# --------------------
+# gRPC config
+# --------------------
+grpc.server.port=50090
