--- a/booking-service/src/main/resources/application.yml
+++ b/booking-service/src/main/resources/application.yml
@@ -21,3 +21,6 @@ bk-travel:
         url: r2dbc:mysql://mysql-server:3306/bk_travel_booking
         username: root
         password: root
+grpc:
+  server:
+    port: 50084
