--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.2.4</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath /> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.aresky</groupId>
     <artifactId>payment-service</artifactId>
@@ -72,16 +72,16 @@
             <artifactId>grpc-spring-boot-starter</artifactId>
             <version>3.1.0.RELEASE</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.salesforce.servicelibs</groupId>-->
-<!--            <artifactId>reactor-grpc-stub</artifactId>-->
-<!--            <version>${reactive.grpc.version}</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.projectreactor</groupId>-->
-<!--            <artifactId>reactor-core</artifactId>-->
-<!--            <version>3.6.5</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.salesforce.servicelibs</groupId>
+            <artifactId>reactor-grpc-stub</artifactId>
+            <version>${reactive.grpc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+            <version>3.6.5</version>
+        </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-protobuf</artifactId>
@@ -118,50 +118,52 @@
     </dependencyManagement>
 
     <build>
-<!--        <extensions>-->
-<!--            <extension>-->
-<!--                <groupId>kr.motd.maven</groupId>-->
-<!--                <artifactId>os-maven-plugin</artifactId>-->
-<!--                <version>1.7.1</version>-->
-<!--            </extension>-->
-<!--        </extensions>-->
+        <!--        <extensions>-->
+        <!--            <extension>-->
+        <!--                <groupId>kr.motd.maven</groupId>-->
+        <!--                <artifactId>os-maven-plugin</artifactId>-->
+        <!--                <version>1.7.1</version>-->
+        <!--            </extension>-->
+        <!--        </extensions>-->
         <plugins>
-<!--            <plugin>-->
-<!--                <groupId>org.xolstice.maven.plugins</groupId>-->
-<!--                <artifactId>protobuf-maven-plugin</artifactId>-->
-<!--                <version>0.6.1</version>-->
-<!--                <configuration>-->
-<!--                    <protocArtifact>com.google.protobuf:protoc:3.25.1:exe:${os.detected.classifier}</protocArtifact>-->
-<!--                    <pluginId>grpc-java</pluginId>-->
-<!--                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}-->
-<!--                    </pluginArtifact>-->
-<!--                    <protoSourceRoot>-->
-<!--                        ${basedir}/src/main/proto-->
-<!--                    </protoSourceRoot>-->
-<!--                    <additionalProtoPathElements>-->
-<!--                        ${basedir}/src/main/resources-->
-<!--                    </additionalProtoPathElements>-->
-<!--                </configuration>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <goals>-->
-<!--                            <goal>compile</goal>-->
-<!--                            <goal>compile-custom</goal>-->
-<!--                        </goals>-->
-<!--                        <configuration>-->
-<!--                            <protocPlugins>-->
-<!--                                <protocPlugin>-->
-<!--                                    <id>reactor-grpc</id>-->
-<!--                                    <groupId>com.salesforce.servicelibs</groupId>-->
-<!--                                    <artifactId>reactor-grpc</artifactId>-->
-<!--                                    <version>${reactive.grpc.version}</version>-->
-<!--                                    <mainClass>com.salesforce.reactorgrpc.ReactorGrpcGenerator</mainClass>-->
-<!--                                </protocPlugin>-->
-<!--                            </protocPlugins>-->
-<!--                        </configuration>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
+            <!--            <plugin>-->
+            <!--                <groupId>org.xolstice.maven.plugins</groupId>-->
+            <!--                <artifactId>protobuf-maven-plugin</artifactId>-->
+            <!--                <version>0.6.1</version>-->
+            <!--                <configuration>-->
+            <!--
+            <protocArtifact>com.google.protobuf:protoc:3.25.1:exe:${os.detected.classifier}</protocArtifact>-->
+            <!--                    <pluginId>grpc-java</pluginId>-->
+            <!--
+            <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}-->
+            <!--                    </pluginArtifact>-->
+            <!--                    <protoSourceRoot>-->
+            <!--                        ${basedir}/src/main/proto-->
+            <!--                    </protoSourceRoot>-->
+            <!--                    <additionalProtoPathElements>-->
+            <!--                        ${basedir}/src/main/resources-->
+            <!--                    </additionalProtoPathElements>-->
+            <!--                </configuration>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <goals>-->
+            <!--                            <goal>compile</goal>-->
+            <!--                            <goal>compile-custom</goal>-->
+            <!--                        </goals>-->
+            <!--                        <configuration>-->
+            <!--                            <protocPlugins>-->
+            <!--                                <protocPlugin>-->
+            <!--                                    <id>reactor-grpc</id>-->
+            <!--                                    <groupId>com.salesforce.servicelibs</groupId>-->
+            <!--                                    <artifactId>reactor-grpc</artifactId>-->
+            <!--                                    <version>${reactive.grpc.version}</version>-->
+            <!--                                    <mainClass>com.salesforce.reactorgrpc.ReactorGrpcGenerator</mainClass>-->
+            <!--                                </protocPlugin>-->
+            <!--                            </protocPlugins>-->
+            <!--                        </configuration>-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
+            <!--            </plugin>-->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
