--- a/staff-service/src/main/resources/application.yml
+++ b/staff-service/src/main/resources/application.yml
@@ -22,3 +22,6 @@ bk-travel:
         url: r2dbc:mysql://mysql-server:3306/bk_travel_staff
         username: root
         password: root
+grpc:
+  server:
+    port: 50085
