--- a/chat-service/src/main/resources/application.yml
+++ b/chat-service/src/main/resources/application.yml
@@ -3,25 +3,26 @@ server:
 spring:
   application:
     name: chat-service
-#  r2dbc:
-#    url: r2dbc:mysql://localhost:3306/bk_travel_chat
-#    username: root
-#    password: root
+  #  r2dbc:
+  #    url: r2dbc:mysql://localhost:3306/bk_travel_chat
+  #    username: root
+  #    password: root
   liquibase:
-    url: jdbc:mysql://localhost:3306/bk_travel_chat
+    url: jdbc:mysql://mysql-server:3306/bk_travel_chat
     user: root
     password: root
     change-log: classpath:db/changelog/changelog-master.xml
 eureka:
   instance:
     hostname: localhost
+    appname: chat-service
   client:
     service-url:
-      defaultUrl: http://localhost:8761/eureka
+      defaultZone: http://discovery-server:8761/eureka
 bk-travel:
   database:
     config:
       server:
-        url: r2dbc:mysql://localhost:3306/bk_travel_chat
+        url: r2dbc:mysql://mysql-server:3306/bk_travel_chat
         username: root
         password: root
