staff-service: update application.yml: update hostname of eureka instance

--- a/staff-service/src/main/resources/application.yml
+++ b/staff-service/src/main/resources/application.yml
@@ -10,7 +10,8 @@ spring:
     change-log: classpath:/db/changelog/changelog-master.xml
 eureka:
   instance:
-    hostname: localhost
+    appname: staff-service
+    hostname: staff-service
   client:
     enabled: true
     service-url:
