chat-service: update application.yml: modify hostname of eureka instance to chat-service

--- a/chat-service/src/main/resources/application.yml
+++ b/chat-service/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
     change-log: classpath:db/changelog/changelog-master.xml
 eureka:
   instance:
-    hostname: localhost
+    hostname: chat-service
     appname: chat-service
   client:
     service-url:
