--- a/review-service/src/main/resources/application.yml
+++ b/review-service/src/main/resources/application.yml
@@ -3,17 +3,22 @@ server:
 spring:
   application:
     name: review-service
+  liquibase:
+    url: jdbc:mysql://mysql-server:3306/bk_travel_review
+    user: root
+    password: root
+    change-log: classpath:db/changelog/changelog-master.xml
 eureka:
   instance:
-    hostname: localhost
+    hostname: review-service
     appname: review-service
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://discovery-server:8761/eureka
 bk-travel:
   database:
     config:
       server:
-        url: r2dbc:mysql://localhost:3306/bk_travel_review
+        url: r2dbc:mysql://mysql-server:3306/bk_travel_review
         username: root
         password: root
