marking-service: update application.yml: modified hostname property for instance of eureka

--- a/marking-service/src/main/resources/application.yml
+++ b/marking-service/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     change-log: classpath:db/changelog/changelog-master.xml
 eureka:
   instance:
-    hostname: localhost
+    hostname: marking-service
     appname: marking-service
   client:
     service-url:
