booking-service: updated application.yml: updated the value of the hostname property of the eureka property

--- a/booking-service/src/main/resources/application.yml
+++ b/booking-service/src/main/resources/application.yml
@@ -10,7 +10,8 @@ spring:
     change-log: classpath:db/changelog/changelog-master.xml
 eureka:
   instance:
-    hostname: localhost
+    hostname: booking-service
+    appname: booking-service
   client:
     service-url:
       defaultZone: http://discovery-server:8761/eureka
