payment-service: updated application.properties: updated the value of the "eureka.instance.hostname" property and more

--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -23,7 +23,8 @@ spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 # --------------------
 # Eureka client config
 # --------------------
-eureka.instance.hostname=localhost
+eureka.instance.hostname=payment-service
+eureka.instance.appname=payment-service
 eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka
 # --------------------
 # gRPC config
