booking-service: updated application.properties: updated the value of the "eureka.instance.hostname" property

--- a/tourist-attraction-service/src/main/resources/application.properties
+++ b/tourist-attraction-service/src/main/resources/application.properties
@@ -25,5 +25,6 @@ spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 # ------------------
 # Eureka discovery client config
 # ------------------
-eureka.instance.hostname=localhost
+eureka.instance.hostname=tourist-attraction-service
+eureka.instance.appname=tourist-attraction-service
 eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka
