booking-service: updated application.yml: add new config properties for kafka

--- a/booking-service/src/main/resources/application.yml
+++ b/booking-service/src/main/resources/application.yml
@@ -25,3 +25,11 @@ bk-travel:
 grpc:
   server:
     port: 50084
+kafka:
+  bootstrap-servers:
+    url: http://kafka-broker-01:19092
+  consumer:
+    group-id: bk-travel-group
+    auto-offset-reset: latest
+    key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
